--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://unpkg.com/lodash@4.16.6"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     <noscript>
@@ -14,6 +15,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="../src/index.js"></script>
+    <script src="../main.js"></script>
+    <!-- <script src="../dist/main.js"></script> -->
   </body>
 </html>
